{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 24,
  "lineage": "04bfcd8c-8f59-4bb0-07f8-3b40ebf1ad0b",
  "resources": [
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:security-group/sg-5998e977",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-5998e977",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds_subnet_id_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:subnet/subnet-4ac4332c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-4ac4332c",
            "map_public_ip_on_launch": true,
            "owner_id": "399728276788",
            "state": "available",
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds_subnet_id_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:subnet/subnet-88a05da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-88a05da9",
            "map_public_ip_on_launch": true,
            "owner_id": "399728276788",
            "state": "available",
            "vpc_id": "vpc-6b282b11"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:399728276788:vpc/vpc-6b282b11",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-d3031fbf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-15b9156f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-6b282b11",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-035ad47d",
            "owner_id": "399728276788",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all_rds",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_all_rds",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}